--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img src="/img/Android.png" height="100" width="250" alt="" />
                 </div>
                 <div class="carrucel-item">
-                    <img src="/img/css.png" height="100" width="250" alt="" />
+                    <img src='./img/css.png' height="100" width="250" alt="" />
                 </div>
                 <div class="carrucel-item">
                     <img src="/img/html.png" height="100" width="250" alt="" />
