con modificaciones en html y css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#Hero">Principal</a>
                 <a href="#Acerca-de-mi">Acerca de mi</a>
                 <a href="#Mis-proyectos">Mis proyectos</a>
-                <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox" target="_blank" rel="noopener noreferrer">Contacto</a>
+                <a href="mailto:aegarciaa@unac.edu.pe?" target="_blank" rel="noopener noreferrer">Contacto</a>
             </nav>
 
         </div>
@@ -25,7 +25,7 @@
 
 <section id="Hero">
     <h1>Alex Enmanuel Garcia Acha</h1>
-    <button><a href="https://mail.google.com/mail/u/0/?tab=wm#inbox" target="_blank" rel="noopener noreferrer">Contáctame</a></button>
+    <button><a href="mailto:aegarciaa@unac.edu.pe?" target="_blank" rel="noopener noreferrer">Contáctame</a></button>
 </section>
 
 <section id="Acerca-de-mi">
