--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="carta">
                     <h4>Proyecciones de Ventas <br> (Python-Pandas_Matplotlib_Numpy)</h4>
                     <!---<p>Haciendo uso de tecnologias Web, como HTML, CSS , JAVASCRIPT, GIT, ETC. Se desarrollo este aplicativo web </p>-->
-                    <button  ><a href="https://github.com/alexgarciaa/Proyecciones-con-Python" target="_blank" rel="noopener noreferrer">Git Hub</a></button>
+                    <button  ><a href="https://github.com/alexgarciaa/Proyecciones-con-Python/blob/main/Anlisis%20de%20Ventas.md" target="_blank" rel="noopener noreferrer">Git Hub</a></button>
                 </div>  
             </div>
 
